# ivcap-python-lambda-example

./: Dockerfile  Makefile  README.md  lambda.py  pyproject.toml  requirements.txt  run.sh  service.json
eliza/: README.md
ui/: index.html
ui/assets/: index-B0SZRugm.js  index-B9cdrSGf.css
