[tool.poetry]
name = "ivcap-python-lambda-service"
version = "0.1.0"
description = "A simple lambda service to be deployed on IVCAP"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
